--- a/style.css
+++ b/style.css
@@ -156,6 +156,30 @@ body {
 .navbarDropdownBtn {
   display: none;
 }
+
+.flags {
+  display: flex;
+  width: 100px;
+  align-items: center;
+  justify-content: center;
+  column-gap: 10px;
+}
+.flagsItem {
+  width: 30px;
+}
+.flagsImg {
+  cursor: pointer;
+  display: block;
+  filter: sepia();
+  transition: 0.3s;
+}
+
+.flagsImg:hover,
+.flagsImg:focus {
+  filter: none;
+  transform: translateY(-4px);
+}
+
 .navbarBtn:hover,
 .navbarBtn:focus,
 .navbarLogo:hover,
@@ -175,7 +199,7 @@ body {
   display: none;
 }
 
-@media (max-width: 833px) {
+@media (max-width: 1100px) {
   .navbarMenu {
     display: none;
   }
@@ -195,9 +219,6 @@ body {
 }
 .headerContainer p {
   font-size: 2rem;
-  span {
-    color: var(--clr-light-orange);
-  }
 }
 .headerContainer p > span {
   color: var(--clr-light-orange);
